fixes tab issue selecting offscreen hidden elements. creates register screens for artist and host selection. and adds login form in menu bar

--- a/client/public/scss/styles.scss
+++ b/client/public/scss/styles.scss
@@ -172,8 +172,12 @@ $colors: (
   width: 100%;
   // overflow: hidden;
   position: relative;
+  overflow: hidden;
   @include for-phone-only {
-    // height: 600px;
+    height: 350px;
+  }
+  @include for-tablet-portrait-up {
+    height: 350px;
   }
   @include for-tablet-landscape-up {
     height: 350px;
@@ -230,6 +234,11 @@ $colors: (
   width: 100%;
   height: 15rem;
   // margin-top: 5rem;
+  position: absolute;
+  left: 0;
+  transition: left .4s;
+
+
   @include for-phone-only {
     height: 10rem;
   }
@@ -247,12 +256,12 @@ $colors: (
     padding: 0 15px;
 
     p {
-      margin-top: 4rem;
+      margin-top: 1rem;
       @include for-phone-only {
         margin-top: 1rem;
       }
       @include for-tablet-landscape-up {
-        margin-top: 4rem;
+        margin-top: 1rem;
       }
     }
 
@@ -295,6 +304,46 @@ $colors: (
       top:1px;
     }
   }
+}
+
+.hide-banner-left {
+  left: -100%;
+}
+
+.hide-banner-right {
+  left: 100%;
+}
+
+.artist-reg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  // background-color: blue;
+  left: 0;
+  transition: left .4s;
+  text-align: center;
+}
+
+.hide-artist-reg {
+  left: -100%;
+}
+
+.host-reg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  // background-color: red;
+  right: 0;
+  transition: right .4s;
+  text-align: center;
+}
+
+.hide-host-reg {
+  right: -100%;
+}
+
+.main-input {
+  margin: auto;
 }
 
 /* navbar ============================================================================*/
@@ -352,8 +401,56 @@ $colors: (
   }
 }
 
-.hide {
+.hide-nav {
   top: -50px
+}
+
+.text-field {
+  display: inline-block;
+  margin: 0 3px;
+}
+
+.login-form-container {
+  display: inline-block;
+  position: absolute;
+  right: 2rem;
+  top: .65rem;
+
+}
+.login-form {
+  display: flex;
+  .login-button {
+    padding: 0;
+    width: 4rem;
+    color: #ffffff;
+  }
+}
+
+.login-button {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5d87cf), color-stop(1, #1e66bd));
+  background:-moz-linear-gradient(top, #5d87cf 5%, #1e66bd 100%);
+  background:-webkit-linear-gradient(top, #5d87cf 5%, #1e66bd 100%);
+  background:-o-linear-gradient(top, #5d87cf 5%, #1e66bd 100%);
+  background:-ms-linear-gradient(top, #5d87cf 5%, #1e66bd 100%);
+  background:linear-gradient(to bottom, #5d87cf 5%, #1e66bd 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5d87cf', endColorstr='#1e66bd',GradientType=0);
+  background-color:#5d87cf;
+  height: 30px;
+  font-size: 12px;
+}
+.login-button:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #1e66bd), color-stop(1, #5d87cf));
+  background:-moz-linear-gradient(top, #1e66bd 5%, #5d87cf 100%);
+  background:-webkit-linear-gradient(top, #1e66bd 5%, #5d87cf 100%);
+  background:-o-linear-gradient(top, #1e66bd 5%, #5d87cf 100%);
+  background:-ms-linear-gradient(top, #1e66bd 5%, #5d87cf 100%);
+  background:linear-gradient(to bottom, #1e66bd 5%, #5d87cf 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#1e66bd', endColorstr='#5d87cf',GradientType=0);
+  background-color:#1e66bd;
+}
+.login-button:active {
+  position: relative;
+  top: 1px;
 }
 
 .navlink {
